--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -7,8 +7,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 <link rel="import" href="../dude-collapse/dude-collapse.html">
 <link rel="import" href="../dude-property/dude-property.html">
 <link rel="import" href="../dude-hierarchy/dude-hierarchy.html">
-<link rel="stylesheet" href="../font-awesome/css/font-awesome.css">
 <link rel="import" href="dude-graph-tool.html">
+<link rel="stylesheet" href="../font-awesome/css/font-awesome.css">
 <!--
 `dude-graph-inspector` is a Polymer element which creates the inspector for dude-graph. In other words, it creates the sidebar that will be used for setting methods and properties.
 
@@ -40,14 +40,14 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 <dude-collapse heading="Tools">
                     <div class="layout horizontal">
                         <dude-graph-tool class="flex"
-                                         icon="fa fa-play"
-                                         description="Build"
-                                         on-click="_buildGraph">
+                                         icon="fa fa-save"
+                                         description="Save"
+                                         on-click="_saveGraph">
                         </dude-graph-tool>
                         <dude-graph-tool class="flex"
-                                         icon="fa fa-square-o"
-                                         description="Add group"
-                                         on-click="_showCreateGroup">
+                                         icon="fa fa-play"
+                                         description="Play"
+                                         on-click="_playGraph">
                         </dude-graph-tool>
                         <dude-graph-tool class="flex"
                                          icon="fa fa-remove"
@@ -55,9 +55,9 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                                          on-click="_removeSelection">
                         </dude-graph-tool>
                         <dude-graph-tool class="flex"
-                                         icon="fa fa-save"
-                                         description="Save"
-                                         on-click="_saveGraph">
+                                         icon="fa fa-square-o"
+                                         description="Create group for selection"
+                                         on-click="_showCreateGroup">
                         </dude-graph-tool>
                         <dude-graph-tool class="flex"
                                          icon="fa fa-compress"
@@ -194,15 +194,31 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             },
 
             /**
-             * Called when clicking on the create group button
-             * Creates a rendererGroup
+             * Called when clicking on the save button
              * @delegate
              * @private
              */
-            _createGroup: function () {
-                this.dudeGraphEditor.createGroup(this._groupName);
-                this.set("_groupName", null);
-                this.set("_createGroupState", false);
+            _saveGraph: function () {
+                this.fire("dude-graph-inspector-save", this.dudeGraphEditor.save());
+            },
+
+            /**
+             * Called when clicking on the play button
+             * @delegate
+             * @private
+             */
+            _playGraph: function () {
+                this.fire("dude-graph-inspector-play");
+            },
+
+            /**
+             * Called when clicking on the remove selection button
+             * Removes the selected rendererNodes
+             * @delegate
+             * @private
+             */
+            _removeSelection: function () {
+                this.dudeGraphEditor.removeSelection();
             },
 
             /**
@@ -226,31 +242,15 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             },
 
             /**
-             * Called when clicking on the remove selection button
-             * Removes the selected rendererNodes
+             * Called when clicking on the create group button
+             * Creates a rendererGroup
              * @delegate
              * @private
              */
-            _removeSelection: function () {
-                this.dudeGraphEditor.removeSelection();
-            },
-
-            /**
-             * Called when clicking on the save button
-             * @delegate
-             * @private
-             */
-            _buildGraph: function () {
-                this.fire("dude-graph-inspector-build");
-            },
-
-            /**
-             * Called when clicking on the save button
-             * @delegate
-             * @private
-             */
-            _saveGraph: function () {
-                this.fire("dude-graph-inspector-save", this.dudeGraphEditor.save());
+            _createGroup: function () {
+                this.dudeGraphEditor.createGroup(this._groupName);
+                this.set("_groupName", null);
+                this.set("_createGroupState", false);
             },
 
             /**
