Fixed polymer documentation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<iron-component-page src="dude-graph.html"></iron-component-page>
+<iron-component-page src="dude-graph-editor.html"></iron-component-page>
 
 </body>
 </html>
