Added extra classes for blocks, points and connections to handle custom colors for types, #127

--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -99,14 +99,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         ::content .dude-graph-input path,
         ::content .dude-graph-output path {
             stroke-width: 1;
-            stroke: var(--dude-type-number-color);
-            fill: var(--dude-type-number-color);
-        }
-
-        ::content .dude-graph-input.dude-graph-stream path,
-        ::content .dude-graph-output.dude-graph-stream path {
-            stroke: var(--dude-type-stream-color);
-            fill: var(--dude-type-stream-color);
+            stroke: var(--dude-type-color);
+            fill: var(--dude-type-color);
         }
 
         ::content .dude-graph-input.dude-graph-empty path,
@@ -119,12 +113,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
          */
         ::content .dude-graph-connection {
             stroke-width: 2px;
-            stroke: var(--dude-type-number-color);
+            stroke: var(--dude-type-color);
             fill: transparent;
-        }
-
-        ::content .dude-graph-connection.dude-graph-stream {
-            stroke: var(--dude-type-stream-color);
         }
     </style>
     <template>
