--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -277,6 +277,13 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
          */
         zoomToFit: function () {
             this.renderer.zoomToFit();
+        },
+
+        /**
+         * Zoom to best fit all blocks and groups
+         */
+        zoomToSelection: function () {
+            this.renderer.zoomToSelection();
         }
     });
 </script>
