--- a/demo/demo-wrapper.html
+++ b/demo/demo-wrapper.html
@@ -58,32 +58,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 
                 "rendererConfig": {
                     "type": Object,
-                    "value": {
-                        "zoom": {
-                            "translate": [0, 0],
-                            "scale": 1,
-                            "min": 0.25,
-                            "max": 5,
-                            "transitionSpeed": 500
-                        },
-                        "block": {
-                            "padding": 10,
-                            "header": 40,
-                            "size": [80, 100],
-                            "borderRadius": 0
-                        },
-                        "group": {
-                            "padding": 10,
-                            "header": 30,
-                            "size": [200, 150],
-                            "borderRadius": 0
-                        },
-                        "point": {
-                            "height": 20,
-                            "radius": 3,
-                            "offset": 20
-                        }
-                    }
+                    "value": {}
                 },
 
                 /**
