--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -201,12 +201,18 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                     this.addOwnKeyBinding("meta+b", "_playGraph");
                     this.addOwnKeyBinding("meta+g", "_showCreateGroup");
                     this.addOwnKeyBinding("meta+0", "_zoomToFit");
+                    this.addOwnKeyBinding("meta+a", "_selectAll");
+                    this.addOwnKeyBinding("meta+alt+a", "_selectAll");
+                    this.addOwnKeyBinding("meta+shift+a", "_selectAll");
                     this.addOwnKeyBinding("meta+shift+0", "_zoomToSelection");
                 } else {
                     this.addOwnKeyBinding("ctrl+s", "_saveGraph");
                     this.addOwnKeyBinding("ctrl+b", "_playGraph");
                     this.addOwnKeyBinding("ctrl+g", "_showCreateGroup");
                     this.addOwnKeyBinding("ctrl+0", "_zoomToFit");
+                    this.addOwnKeyBinding("ctrl+a", "_selectAll");
+                    this.addOwnKeyBinding("ctrl+alt+a", "_selectAll");
+                    this.addOwnKeyBinding("ctrl+shift+a", "_selectAll");
                     this.addOwnKeyBinding("ctrl+shift+0", "_zoomToSelection");
                 }
                 this.addOwnKeyBinding("del", "_removeSelection");
@@ -250,6 +256,24 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 if (e && e.detail && e.detail.keyboardEvent) {
                     e.detail.keyboardEvent.preventDefault();
                 }
+            },
+
+            /**
+             * Called when pressing (cmd+a/ctrl+a)
+             * Select all blocks and groups
+             * @param {CustomEvent} e
+             * @delegate
+             * @private
+             */
+            _selectAll: function (e) {
+                var shift = false;
+                var alt = false;
+                if (e && e.detail && e.detail.keyboardEvent) {
+                    shift = e.detail.keyboardEvent.shiftKey;
+                    alt = e.detail.keyboardEvent.altKey;
+                    e.detail.keyboardEvent.preventDefault();
+                }
+                this.dudeGraphEditor.selectAll(shift, alt);
             },
 
             /**
