--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -274,8 +274,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 
         /**
          * Removes the selected blocks and groups
-         * @param {Boolean} ignoreBlocks - Whether to not select all blocks
-         * @param {Boolean} ignoreGroups - Whether to not select all groups
+         * @param {Boolean?} ignoreBlocks - Whether to not select all blocks
+         * @param {Boolean?} ignoreGroups - Whether to not select all groups
          */
         selectAll: function (ignoreBlocks, ignoreGroups) {
             this.renderer.selectAll(ignoreBlocks, ignoreGroups);
