--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -253,7 +253,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
          */
         createBlock: function (cgBlockData) {
             this.loader.loadBlock(this.graph, _.merge(cgBlockData, {
-                "cgId": dudeGraph.UUID.generate()
+                "cgId": _.uuid()
             }));
         },
 
