Updated to d3.min

--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -2,7 +2,7 @@
 Copyright (c) 2015 DudeTeam. All rights reserved.
 -->
 <link rel="import" href="../polymer/polymer.html">
-<script src="../d3/d3.js"></script>
+<script src="../d3/d3.min.js"></script>
 <script src="../lodash/lodash.min.js"></script>
 <script src="../eventEmitter/EventEmitter.min.js"></script>
 <script src="dude-graph.js"></script>
