Added render group Added zoom to (fit|selection) Added selectAll Tweaked selection

--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -213,7 +213,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                     this.addOwnKeyBinding("ctrl+alt+a", "_selectAll");
                     this.addOwnKeyBinding("ctrl+shift+a", "_selectAll");
                     this.addOwnKeyBinding("ctrl+0", "_zoomToFit");
-                    this.addOwnKeyBinding("ctrl+shift+0", "_zoomToSelection");
+                    this.addOwnKeyBinding("ctrl+alt+0", "_zoomToSelection");
                 }
                 this.addOwnKeyBinding("del", "_removeSelection");
             },
