--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
     <title>dude-graph - Demo</title>
     <script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <!-- firefox didn't for without adding this links in the index -->
-    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
     <link rel="import" href="../bower_components/dude-style/dude-style.html">
     <link rel="import" href="demo-wrapper.html">
 </head>
