--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -36,7 +36,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         }
 
         /**
-         * Selection brush
+         * Select brush
          */
         ::content .dude-graph-select {
             fill: hsla(0, 0%, 80%, 0.1);
