Added colors for points.

--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -117,6 +117,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
     </template>
     <script>
         var DudeGraphInspector = Polymer({
+
             is: "dude-graph-inspector",
 
             properties: {
@@ -155,13 +156,13 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 
             /**
              * The current selected rendererBlock
-             * @type {dudeGraph.RendererBlock}
+             * @type {dudeGraph.RenderBlock}
              */
             _rendererBlock: null,
 
             /**
              * The current selected rendererBlock
-             * @type {dudeGraph.RendererGroup}
+             * @type {dudeGraph.RenderGroup}
              */
             _rendererGroup: null,
 
